--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html,
+body {
+  background-color: #f7f7f7;
+  margin: 0;
+}
+
 .SoundCategory {
   overflow-y: auto;
 }
@@ -7,25 +13,74 @@
   margin: 15px 5px;
 }
 
+.Sound-div {
+  display: inline-flex;
+  margin: 15px;
+  position: relative;
+}
+
 .Sound {
   background-color: darksalmon;
-  border: none;
   border-radius: 8px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
   height: 100px;
-  margin: 15px;
-  /* top and bottom | left and right */
+  overflow: hidden;
   padding: 0px 15px;
   text-align: center;
-  text-decoration: none;
+  text-overflow: ellipsis;
   vertical-align: middle;
-  width: auto;
+  white-space: nowrap;
+  width: 250px;
+}
+
+.Sound-settings {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  margin: 0px;
+  padding: 0px;
+  position: absolute;
+  right: 0px;
+  top: 5px;
 }
 
 .Collapsible-button {
-  cursor: pointer;
-  color: inherit;
   background-color: inherit;
   border: none;
+  color: inherit;
+  cursor: pointer;
+  padding: 0px;
+}
+
+.Collapsible-heading {
+  margin: 0px;
+}
+
+.Collapsible-content {
+  padding-left: 2%;
+}
+
+.Modal {
+  border-radius: 2px;
+  border-width: 0px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+  font-size: 20px;
+}
+
+.Modal::backdrop {
+  background-color: rgba(0, 0, 0, 0.25);
+  height: 100%;
+  left: 0px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 100;
+}
+
+.Modal-content {
+  padding: 15px 5px;
 }
 
 /* https://stackoverflow.com/a/65297702 */
@@ -37,4 +92,10 @@
 /* make button color darker on click */
 .Sound:active {
   background-image: linear-gradient(rgb(0 0 0/17.5%) 0 0);
+}
+
+.icon {
+  height: 1.5em;
+  vertical-align: middle;
+  width: 1.5em;
 }
