--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,57 @@ body {
   margin: 0;
 }
 
+.icon-button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0px;
+}
+
+.icon {
+  height: 1.5em;
+  vertical-align: middle;
+  width: 1.5em;
+}
+
+.Collapsible-heading {
+  margin: 0px;
+}
+
+.Collapsible-content {
+  padding-left: 2%;
+}
+
+.Modal {
+  border-radius: 2px;
+  border-width: 0px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+  font-size: 20px;
+  position: relative;
+}
+
+.Modal::backdrop {
+  backdrop-filter: blur(1px);
+  background-color: rgba(0, 0, 0, 0.25);
+  height: 100%;
+  left: 0px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 100;
+}
+
+.Modal-content {
+  padding: 15px 15px 15px 5px;
+}
+
+.Modal-close {
+  font-size: 18px;
+  position: absolute;
+  right: 3px;
+  top: 3px;
+}
+
 .SoundCategory {
   overflow-y: auto;
 }
@@ -20,7 +71,6 @@ body {
 }
 
 .Sound {
-  background-color: darksalmon;
   border-radius: 8px;
   border: none;
   cursor: pointer;
@@ -35,54 +85,6 @@ body {
   width: 250px;
 }
 
-.Sound-settings {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  margin: 0px;
-  padding: 0px;
-  position: absolute;
-  right: 0px;
-  top: 5px;
-}
-
-.Collapsible-button {
-  background-color: inherit;
-  border: none;
-  color: inherit;
-  cursor: pointer;
-  padding: 0px;
-}
-
-.Collapsible-heading {
-  margin: 0px;
-}
-
-.Collapsible-content {
-  padding-left: 2%;
-}
-
-.Modal {
-  border-radius: 2px;
-  border-width: 0px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
-  font-size: 20px;
-}
-
-.Modal::backdrop {
-  background-color: rgba(0, 0, 0, 0.25);
-  height: 100%;
-  left: 0px;
-  position: fixed;
-  top: 0px;
-  width: 100%;
-  z-index: 100;
-}
-
-.Modal-content {
-  padding: 15px 5px;
-}
-
 /* https://stackoverflow.com/a/65297702 */
 /* make button color darker on hover */
 .Sound:hover {
@@ -94,8 +96,8 @@ body {
   background-image: linear-gradient(rgb(0 0 0/17.5%) 0 0);
 }
 
-.icon {
-  height: 1.5em;
-  vertical-align: middle;
-  width: 1.5em;
+.Sound-settings {
+  position: absolute;
+  right: 0px;
+  top: 5px;
 }
