--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
 .icon-button {
   background-color: transparent;
   border: none;
+  color: inherit;
   cursor: pointer;
   padding: 0px;
 }
@@ -73,6 +74,7 @@ body {
 .Sound {
   border-radius: 8px;
   border: none;
+  color: inherit;
   cursor: pointer;
   font-size: 16px;
   height: 100px;
